# moon_build_dashboard

./: Cargo.toml  README.md  daily.sql  data.jsonl  index.html  query.sql  repos.txt
.github/workflows/: jobs.yml
assets/: index-DAw8Sb9J.js  index-DP5dFeRk.css
src/: cli.rs  dashboard.rs  git.rs  lib.rs  main.rs  mooncakesio.rs  util.rs
src/transform/: mod.rs  page0.rs
webapp/: index.html  package.json
webapp/public/: data.jsonl
webapp/src/: App.tsx  main.tsx
